# veloren

./: .dummy-file  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lfsconfig  .mailmap  .rustfmt.toml  .tokeignore  .travis.yml  4  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE  PARALLEL_CONVERSION_FRAMEWORK.md  README.md  README_GLITCH_STREAMED_NATIVE.md  README_GLITCH_VELOREN.md  ROADMAP.md  Websites.txt  clippy.toml  default.nix  diff  es_la.ron  flake.nix  frame-trace_1624490729496.json  frame-trace_1624496547100.json  frame-trace_1624499190101.json  frame-trace_1630269013224.json  frame-trace_1630269023610.json  frame-trace_1630269361840.json  frame-trace_1634705763589.json  frame-trace_1635217738690.json  frame-trace_1635388024283.json  glitch-streamed-native.json  items.csv  list.txt  (+9 more)
botclient/: Cargo.toml
botclient/src/: main.rs
chat-cli/: .gitignore  Cargo.toml
chat-cli/src/: main.rs
client/: Cargo.toml
client/examples/: chat_cli.rs
client/i18n/: Cargo.toml
client/src/: addr.rs  callbacks.rs  client.rs  cmd.rs  error.rs  input.rs  lib.rs  player.rs  session.rs
common/: Cargo.toml  build.rs
common/assets/: Cargo.toml  npc_names.json
common/base/: Cargo.toml
common/benches/: chonk_benchmark.rs  color_benchmark.rs  loot_benchmark.rs
common/common-api/: Cargo.toml
common/dynlib/: Cargo.toml
common/ecs/: Cargo.toml
common/examples/: sprite_debug.rs
common/frontend/: Cargo.toml
common/i18n/: Cargo.toml
common/net/: Cargo.toml
common/query_server/: Cargo.toml
common/src/: assets.rs  astar.rs  astar2.rs  cached_spatial_grid.rs  calendar.rs  character.rs  clock.rs  cmd.rs  combat.rs  consts.rs  depot.rs  effect.rs  event.rs  explosion.rs  generation.rs  grid.rs  hierarchical.rs  interaction.rs  lib.rs  link.rs  loadout_builder.rs  lod.rs  lottery.rs  map.rs  metrics.rs  mod_loader.rs  mounting.rs  names.rs  npc.rs  outcome.rs  path.rs  pathfinding.rs  plugin.rs  random_names.rs  ray.rs  recipe.rs  region.rs  resources.rs  rtsim.rs  shared_server_config.rs  (+16 more)
common/state/: Cargo.toml
common/sys/: Cargo.toml
common/systems/: Cargo.toml
common/tests/: net.rs
glitch/veloren-auth-provisioner/: Cargo.toml
network/: Cargo.toml
network/benches/: speed.rs
network/examples/: .gitignore  chat.rs  network_speed.rs  tcp_loadtest.rs
network/protocol/: Cargo.toml
network/src/: api.rs  async_serde.rs  channel.rs  client.rs  controller.rs  frame.rs  frames.rs  internal.rs  internal_messages.rs  lib.rs  message.rs  metrics.rs  mio_worker.rs  mpsc.rs  packet.rs  participant.rs  prios.rs  protocol.rs  protocols.rs  scheduler.rs  server.rs  tcp.rs  tcp_channel.rs  trace.rs  types.rs  udp.rs  util.rs  worker.rs
network/tests/: closing.rs  helper.rs  integration.rs
plugin-api/: Cargo.toml
plugin-api/hello/: Cargo.toml
plugin-api/plugin-api-derive/: Cargo.toml
plugin-api/plugin_proc/: Cargo.toml
plugin-api/src/: lib.rs
plugin/api/: Cargo.toml
rtsim/: Cargo.toml
rtsim/src/: event.rs  lib.rs  rule.rs
server/: Cargo.toml  Cargo.toml.orig
server-cli/: .gitignore  .~lock.economy.csv#  Cargo.toml  Dockerfile  docker-compose.yml  docker-run.sh
server-cli/src/: admin.rs  cli.rs  cmd.rs  logging.rs  main.rs  old_main.rs  settings.rs  shutdown_coordinator.rs  tui_runner.rs  tuilog.rs
server-gui/: Cargo.toml
server-gui/src/: app.rs  gui_log.rs  launch_config.rs  main.rs  server_thread.rs
server/agent/: Cargo.toml
server/dynlib/: Cargo.toml
server/src/: alias_validator.rs  auth_provider.rs  automod.rs  character_creator.rs  chat.rs  chunk_generator.rs  chunk_serialize.rs  client.rs  cmd.rs  config.rs  connection_handler.rs  data_dir.rs  error.rs  init.rs  input.rs  lib.rs  location.rs  lod.rs  login_provider.rs  login_provider.rs.orig  metrics.rs  old_lib.rs  old_server.rs  pet.rs  player.rs  presence.rs  provider.rs  register.rs  server.rs  server_context.rs  session.rs  settings.rs  state_ext.rs  streams.rs  terrain_persistence.rs  test_world.rs  tmp32svyn  tmp4osqkf  tmp6u35p9  tmp7hm80l  (+39 more)
voxygen/: .gitignore  Cargo.toml  Settings.toml  build.rs  clippy.toml
voxygen/anim/: Cargo.toml
voxygen/benches/: meshing_benchmark.rs
voxygen/chat-i18n/: Cargo.toml
voxygen/dynlib/: Cargo.toml
voxygen/egui/: Cargo.toml
voxygen/examples/: character_renderer.rs  voxygen - Shortcut.lnk
voxygen/i18n/: Cargo.toml  README.md
voxygen/i18n-check/: Cargo.toml  README.md
voxygen/i18n-helpers/: Cargo.toml
voxygen/shaders/: character.frag  character.vert  figure.frag  figure.vert  fluid.frag  fluid.vert  frag.glsl  postprocess.frag  postprocess.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  ui.frag  ui.vert  vert.glsl
voxygen/src/: camera.rs  cli.rs  cmd.rs  consts.rs  controller.rs  credits.rs  discord.rs  error.rs  game.rs  game_input.rs  global_consts.rs  i18n.rs  key_state.rs  keybinds.rs  lan_discovery.rs  lib.rs  logging.rs  main.rs  map.rs  mesh.rs  meta.rs  model_object.rs  panic_handler.rs  pipeline.rs  profile.rs  render_ctx.rs  render_volume.rs  renderer.rs  run.rs  session.rs  settings.rs  singleplayer.rs  ui.rs  vertex_buffer.rs  vox.rs  window.rs
voxygen/test_assets/: belt.vox  body.vox  chest.vox  dragon_body.vox  dragon_lfoot.vox  dragon_rfoot.vox  dragon_tail.vox  dragon_wingL_in.vox  dragon_wingL_out.vox  dragon_wingR_in.vox  dragon_wingR_out.vox  foot.vox  foot_BL.vox  foot_BR.vox  foot_FL.vox  foot_FR.vox  hand.vox  head.vox  lionhead.vox  pants.vox  sabremale.vox  sword.vox
voxygen/tests/: check_i18n_files.rs  validate_vox_files.rs
voxygen/vox/: 2.vox  3.vox  5.vox
world/: Cargo.toml  economy_testinput.ron  economy_testinput2.ron
world/benches/: cave.rs  site.rs  tree.rs
world/examples/: batch_generate.rs  cave_biomes.rs  cave_view.rs  chunk_compression_benchmarks.rs  city.rs  dungeon_voxel_export.rs  economy_tree.rs  heightmap_visualization.rs  manifest.rs  namegen.rs  palettes.ron  pricing_csv.rs  settlement_viewer.rs  site.rs  turb.rs  view.rs  water.rs  world_block_statistics.rs  world_generate_time.rs
worldsim/: Cargo.toml
(+15762 files in other folders)
