[package]
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2018"
name = "veloren-botclient"
version = "0.8.0"

[dependencies]
authc = { git = "https://gitlab.com/veloren/auth.git", rev = "bffb5181a35c19ddfd33ee0b4aedba741aafb68d" }
client = { package = "veloren-client", path = "../client" }
common = { package = "veloren-common", path = "../common", features = ["no-assets"] }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-ecs = {package = "veloren-common-ecs", path = "../common/ecs"}
common-net = { package = "veloren-common-net", path = "../common/net" }
common-sys = { package = "veloren-common-sys", path = "../common/sys", default-features = false }

hashbrown = {version = "0.9", features = ["rayon", "serde", "nightly"]}
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
serde = {version = "1.0", features = [ "rc", "derive" ]}
ron = {version = "0.6", default-features = false}

clap = "2.33"
rustyline = "8.0.0"

# logging
termcolor = "1.1"
tracing = "0.1"
tracing-appender = "0.1"
tracing-log = "0.1.1"
tracing-subscriber = {version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "chrono", "ansi", "smallvec", "tracing-log"]}
