[package]
name = "veloren-chat-cli"
version = "0.4.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

[dependencies]
client = { package = "veloren-client", path = "../client" }
common = { package = "veloren-common", path = "../common" }

log = "0.4.8"
pretty_env_logger = "0.3.1"
