[package]
name = "veloren-client"
version = "0.14.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[features]
simd = ["vek/platform_intrinsics"]
plugins = ["common-state/plugins"]
bin_bot = ["common-ecs", "serde", "ron", "clap", "structopt", "rustyline", "common-frontend", "async-channel", "voxygen-i18n-helpers", "client-i18n"]
tracy = ["common-base/tracy"]
tick_network = []

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = "../common", features = ["no-assets"] }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-state = { package = "veloren-common-state", path = "../common/state", default-features = false }
common-systems = { package = "veloren-common-systems", path = "../common/systems", default-features = false }
common-net = { package = "veloren-common-net", path = "../common/net" }
network = { package = "veloren-network", path = "../network", features = ["compression","quic"], default-features = false }

byteorder = "1.3.2"
tokio = { version = "1.14", default-features = false, features = ["rt-multi-thread"] }
quinn = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }
num = "0.4"
tracing = { version = "0.1", default-features = false }
rayon = "1.5"
specs = { version = "0.18", features = ["serde", "storage-event-control", "derive"] }
vek = { version = "0.15.8", features = ["serde"] }
hashbrown = { version = "0.12", features = ["rayon", "serde", "nightly"] }
authc = { git = "https://gitlab.com/veloren/auth.git", rev = "fb3dcbc4962b367253f8f2f92760ef44d2679c9a" }

#TODO: put bot in a different crate
#bot only
async-channel = { version = "1.6", optional = true }
common-ecs = { package = "veloren-common-ecs", path = "../common/ecs", optional = true }
voxygen-i18n-helpers = { package = "veloren-voxygen-i18n-helpers", path = "../voxygen/i18n-helpers", optional = true }
client-i18n = { package = "veloren-client-i18n", path = "i18n", optional = true }
serde = { version = "1.0", features = [ "rc", "derive" ], optional = true }
ron = { version = "0.8", default-features = false, optional = true }
clap = { version = "3.1.8", optional = true, features = ["color", "std"] }
structopt = { version = "0.3.13", optional = true }
rustyline = { version = "10.0.0", optional = true }
## logging
termcolor = { version = "1.1", optional = true }
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend", optional = true }

[dev-dependencies]
voxygen-i18n-helpers = { package = "veloren-voxygen-i18n-helpers", path = "../voxygen/i18n-helpers" }
client-i18n = { package = "veloren-client-i18n", path = "i18n" }

[[example]]
name = "chat-cli"
required-features = ["bin_bot"]

[[bin]]
name = "bot"
#authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
required-features = ["bin_bot"]

[[bin]]
name = "swarm"
required-features = ["bin_bot", "tick_network"]
