[package]
name = "veloren-client"
version = "0.15.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[features]
simd = ["vek/platform_intrinsics"]
plugins = ["common-state/plugins"]
bin_bot = ["serde", "ron", "clap", "rustyline", "common-frontend", "async-channel", "voxygen-i18n-helpers", "client-i18n"]
tracy = ["common-base/tracy"]
tick_network = []

default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = "../common", features = ["no-assets"] }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-state = { package = "veloren-common-state", path = "../common/state", default-features = false }
common-systems = { package = "veloren-common-systems", path = "../common/systems", default-features = false }
common-net = { package = "veloren-common-net", path = "../common/net" }
network = { package = "veloren-network", path = "../network", features = ["compression","quic"], default-features = false }

byteorder = "1.3.2"
tokio = { workspace = true, features = ["rt-multi-thread"] }
quinn = "0.10"
image = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
specs = { workspace = true, features = ["serde", "storage-event-control", "derive"] }
vek = { workspace = true }
hashbrown = { workspace = true }
authc = { git = "https://gitlab.com/veloren/auth.git", rev = "abb1a705827984e11706d7bb97fb7a459e1e6533" } # xMAC94x/current_master_till_refactored branch

#TODO: put bot in a different crate
#bot only
async-channel = { version = "2.1", optional = true }
voxygen-i18n-helpers = { package = "veloren-voxygen-i18n-helpers", path = "../voxygen/i18n-helpers", optional = true }
client-i18n = { package = "veloren-client-i18n", path = "i18n", optional = true }
serde = { workspace = true, features = [ "rc" ], optional = true }
ron = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
rustyline = { version = "13.0.0", optional = true }
## logging
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend", optional = true }

[dev-dependencies]
voxygen-i18n-helpers = { package = "veloren-voxygen-i18n-helpers", path = "../voxygen/i18n-helpers" }
client-i18n = { package = "veloren-client-i18n", path = "i18n" }

[[example]]
name = "chat-cli"
required-features = ["bin_bot"]

[[bin]]
name = "bot"
#authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
required-features = ["bin_bot"]

[[bin]]
name = "swarm"
required-features = ["bin_bot", "tick_network"]
